--- a/style.css
+++ b/style.css
@@ -253,60 +253,6 @@ section.portfolio .flex{
 .oveerlay:hover{
     opacity: 1;
 }
-
-/* ESTILO DO FORMULARIO */
-section.formulario{
-    padding: 80px 4%;
-}
-
-form{
-    max-width: 500px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    gap: 10px;
-    margin-top: 40px;
-}
-
-form input, form textarea{
-    width: 100%;
-    background-color: #242424;
-    border: 0;
-    outline: 0;
-    padding: 20px 15px;
-    border-radius: 15px;
-    color: #fff;
-    font-size: 18px;
-}
-
-form input::placeholder{
-    color: #fff;
-}
-
-form textarea::placeholder{
-    color: #fff;
-}
-
-form textarea{
-    resize: none;
-    max-height: 200px;
-}
-
-form .btn-enviar{
-    margin-top: 20px;
-    text-align: center;
-}
-
-form .btn-enviar input{
-    width: 120px;
-    background-color: blue;
-    color: black;
-    font-weight: 700;
-    cursor: pointer;
-    transition: .2s;
-}
-
 /* ESTILO RODAPE DO SITE */
 
 footer{
@@ -332,6 +278,10 @@ footer .line-footer p i{
 }
 
 footer .line-footer p a{
+    color: #fff;
+}
+
+.contatoemail{
     color: #fff;
 }
 
